07-query-backend/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: observai-query-api
  namespace: observai-main
  labels:
    app: observai-query-api
    app.kubernetes.io/component: observai-query-api
    app.kubernetes.io/instance: observai-query-api
    app.kubernetes.io/name: observai-query-api
    app.kubernetes.io/part-of: observai-insecure
    app.openshift.io/runtime-version: latest
spec:
  host: observai-query-api-observai-main.apps.zagaopenshift.zagaopensource.com
  to:
    kind: Service
    name: observai-query-api
    weight: 100
  port:
    targetPort: 8081-tcp
  wildcardPolicy: None
